Don't deploy review from main
* Remove 'review' from the environments deployed to following merges to
  main

It looks like we're deploying to review which, whilst probably no-opping
is taking 2-3 minutes. We don't need to do this.

--- a/.github/workflows/cicd-2-main-branch.yaml
+++ b/.github/workflows/cicd-2-main-branch.yaml
@@ -89,7 +89,7 @@ jobs:
       id-token: write
     uses: ./.github/workflows/stage-4-deploy.yaml
     with:
-      environments: '["review","dev","preprod","prod"]'
+      environments: '["dev","preprod","prod"]'
       commit_sha: ${{ github.sha }}
     secrets: inherit
 
