--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "django-linear-migrations>=2.19.0",
   "pydicom>=3.0.1",
   "pynetdicom>=3.0.4",
+  "django-storages[azure]>=1.14.6",
 ]
 
 [dependency-groups]
