--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "python-statemachine>=2.5.0",
   "pydicom>=3.0.1",
   "pynetdicom>=3.0.4",
+  "django-storages[azure]>=1.14.6",
 ]
 
 [dependency-groups]
