--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
   "django-extensions (>=4.1,<5.0)",
   "azure-monitor-opentelemetry (>=1.8.1,<2.0.0)",
   "django-linear-migrations>=2.19.0",
+  "python-statemachine>=2.5.0",
 ]
 
 [dependency-groups]
