--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "pydicom>=3.0.1",
   "pynetdicom>=3.0.4",
   "django-storages[azure]>=1.14.6",
+  "django-ninja>=1.5.3",
 ]
 
 [dependency-groups]
