--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
   "pydicom>=3.0.1",
   "pynetdicom>=3.0.4",
   "django-storages[azure]>=1.14.6",
+  "django-ninja>=1.5.3",
+  "ninja-put-patch-file-upload-middleware>=0.1.4",
 ]
 
 [dependency-groups]
