Remove invalid statuses from seed data
Use IN_PROGRESS instead of STARTED

--- a/manage_breast_screening/data/west_tester_today_clinic_data.yml
+++ b/manage_breast_screening/data/west_tester_today_clinic_data.yml
@@ -40,7 +40,7 @@ clinic:
         statuses:
           - SCHEDULED
           - CHECKED_IN
-          - STARTED
+          - IN_PROGRESS
         screening_episode:
           id: b33ce2c9-6b96-4975-9439-3beb60333d4e
           participant:
@@ -74,8 +74,7 @@ clinic:
         statuses:
           - SCHEDULED
           - CHECKED_IN
-          - STARTED
-          - IDENTITY_CONFIRMED
+          - IN_PROGRESS
         screening_episode:
           id: 9bbdccba-ce84-4cc6-b980-da147c0d6d15
           participant:
@@ -110,9 +109,7 @@ clinic:
         statuses:
           - SCHEDULED
           - CHECKED_IN
-          - STARTED
-          - IDENTITY_CONFIRMED
-          - MEDICAL_INFORMATION_REVIEWED
+          - IN_PROGRESS
         screening_episode:
           id: 3b6b2da9-9dda-415d-89d7-f4c5b5ec029a
           participant:
@@ -147,10 +144,7 @@ clinic:
         statuses:
           - SCHEDULED
           - CHECKED_IN
-          - STARTED
-          - IDENTITY_CONFIRMED
-          - MEDICAL_INFORMATION_REVIEWED
-          - IMAGES_TAKEN
+          - IN_PROGRESS
         screening_episode:
           id: 0314777f-907c-4372-a137-e067f15a7662
           participant:
@@ -706,7 +700,7 @@ clinic:
       appointment:
         id: 0a382d89-0042-49b8-87ba-fa0d9c817fd3
         statuses:
-          - STARTED
+          - IN_PROGRESS
         screening_episode:
           id: 1ddfad46-b4de-47b9-b2ce-50a76e2d1a57
           participant:
